...
                      value: _rollVirtualDice,
                      onChanged: (bool value) {
                        setState(() {
                          _setWithVirtualDice(value);
                        });
                      },
                      title: const Text("Auto-roll"),
                    ),
                    ListTile(
                      onTap: () {
                        _showAddVirtualDieDialog(context);
                      },
                      title: const Text('Add New Virtual Die'),
...
                      },
                    ),
                    TextButton.icon(
                      onPressed: () {
                        widget.viewModel.rollAllVirtualDice.execute(true);
                      },
                      label: const Text("Roll"),
                      icon: const Icon(Icons.refresh),
                    ),
                  ],
                ), // TODO: Does this need to be listenable?  does the stream already handle updates?
                Expanded(
                  child: ListenableBuilder(
...
                            return Center(child: Text('Error: ${snapshot.error}'));
                          }

                          final List<GenericDie> devices = snapshot.data?.values.toList() ?? [];

                          if (devices.isEmpty) {
                            return const Center(child: Text('No dice added'));
                          }
                          return ListView.builder(
                            itemCount: devices.length,
                            itemBuilder: (context, index) {
                              final die = devices[index];

...
                        //       ),
                        //     ),
                        //   ],
                        // ),
                        TextButton.icon(
                          icon: const Icon(Icons.clear_all),
                          label: const Text('Clear'),
                          onPressed: () {
                            widget.viewModel.clearRollResultHistory.execute();
                          },
                        ),
                      ],
                    ),
...
                      builder: (context, _) {
                        return StreamBuilder(
                          stream: widget.viewModel.getResultsStream(),
                          builder: (context, snapshot) {
                            List<RollResult> rollResults = snapshot.data ?? [];
                            if (rollResults.isEmpty) {
                              return const Center(child: Text('Make some rolls!'));
                            }
                            return ListView.builder(
                              itemCount: rollResults.length,
                              itemBuilder: (context, index) {
                                return ListTile(title: _makeRollText(context, rollResults[index]));
                              },
...
