...
      'd4' => 'd4',
      'd6' => 'd6',
      'd8' => 'd8',
      'd10' => 'd10',
      'd00' => 'd10x',
      'd12' => 'd12',
      'd20' => 'd20',
      _ => 'mod',
    };
  }

  Map<String, dynamic>? _operator(RollType rollType) {
    return switch (rollType) {
...
